for the ChangeLog file, if none already exists.  Customize
`change-log-directory-files' to nil for the old behavior.

---
** Support for non-string values of `time-stamp-format' has been removed.

** Tramp

+++
*** New connection method "sg", which allows to edit files under
different group ID.

+++
*** New connection method "doas" for OpenBSD hosts.


* New Modes and Packages in Emacs 25.2


* Incompatible Lisp Changes in Emacs 25.2

+++
** Resizing a frame no longer runs `window-configuration-change-hook'.
Put your function on `window-size-change-functions' instead.


* Lisp Changes in Emacs 25.2

** New var syntax-ppss-table to control the syntax-table used in syntax-ppss

** Autoload files can be generated without timestamps,
by setting `autoload-timestamps' to nil.
FIXME As an experiment, nil is the current default.
If no insurmountable problems before next release, it can stay that way.

** `ert-with-function-mocked' of 'ert-x package allows mocking of functions
in unit tests.

+++
** New functions `window-pixel-width-before-size-change' and
`window-pixel-height-before-size-change' allow to detect which window
changed size when `window-size-change-functions' are run.


* Changes in Emacs 25.2 on Non-Free Operating Systems

** Intercepting hotkeys on Windows 7 and later now works better.
The new keyboard hooking code properly grabs system hotkeys such as
Win-* and Alt-TAB, in a way that Emacs can get at them before the
system.  This makes the `w32-register-hot-key' functionality work
again on all versions of MS-Windows starting with Windows 7.  On
Windows NT and later you can now register any hotkey combination.  (On
Windows 9X, the previous limitations, spelled out in the Emacs manual,
still apply.)


* Installation Changes in Emacs 25.1

+++
** Building Emacs now requires C99 or later.

+++
** Building Emacs now requires GNU make, version 3.81 or later.

+++
** New configure option --with-cairo.